@@ -52,15 +52,22 @@ class ApiDelete extends ApiBase {
 		$this->getMain()->requestWriteMode();
 		$params = $this->extractRequestParams();
 
-		$titleObj = NULL;
-		if(!isset($params['title']))
-			$this->dieUsageMsg(array('missingparam', 'title'));
+		$this->requireOnlyOneParameter($params, 'title', 'pageid');
 		if(!isset($params['token']))
 			$this->dieUsageMsg(array('missingparam', 'token'));
 
-		$titleObj = Title::newFromText($params['title']);
-		if(!$titleObj)
-			$this->dieUsageMsg(array('invalidtitle', $params['title']));
+		if(isset($params['title']))
+		{
+			$titleObj = Title::newFromText($params['title']);
+			if(!$titleObj)
+				$this->dieUsageMsg(array('invalidtitle', $params['title']));
+		}
+		else if(isset($params['pageid']))
+		{
+			$titleObj = Title::newFromID($params['pageid']);
+			if(!$titleObj)
+				$this->dieUsageMsg(array('nosuchpageid', $params['pageid']));
+		}
 		if(!$titleObj->exists())
 			$this->dieUsageMsg(array('notanarticle'));
 
@@ -112,8 +119,8 @@ class ApiDelete extends ApiBase {
 	public static function delete(&$article, $token, &$reason = NULL)
 	{
 		global $wgUser;
-		
-		$errors = self::getPermissionsError($article->getTitle(), $token);
+		$title = $article->getTitle();
+		$errors = self::getPermissionsError($title, $token);
 		if (count($errors)) return $errors;
 
 		// Auto-generate a summary, if necessary
@@ -168,6 +175,9 @@ class ApiDelete extends ApiBase {
 	public function getAllowedParams() {
 		return array (
 			'title' => null,
+			'pageid' => array(
+				ApiBase::PARAM_TYPE => 'integer'
+			),
 			'token' => null,
 			'reason' => null,
 			'watch' => false,
@@ -178,7 +188,8 @@ class ApiDelete extends ApiBase {
 
 	public function getParamDescription() {
 		return array (
-			'title' => 'Title of the page you want to delete.',
+			'title' => 'Title of the page you want to delete. Cannot be used together with pageid',
+			'pageid' => 'Page ID of the page you want to delete. Cannot be used together with title',
 			'token' => 'A delete token previously retrieved through prop=info',
 			'reason' => 'Reason for the deletion. If not set, an automatically generated reason will be used.',
 			'watch' => 'Add the page to your watchlist',
